--- a/src/main/resources/templates/article_edit.html
+++ b/src/main/resources/templates/article_edit.html
@@ -12,8 +12,9 @@
 
             <!-- 게시글 추가 폼 -->
             <div class="mt-4">
-                <h2>게시글 추가</h2>
-                <form th:action="@{/api/articles}" method="post" name="content">
+                <h2>게시글을 수정 합니다.</h2>
+                <form th:action="@{/api/article_edit/{id}(id=${article.id})}" method="post" name="content">
+                    <input type="hidden" name="_method" value="put">
                     <div class="form-group">
                         <label for="title">제목:</label>
                         <input type="text" class="form-control" id="title" name="title" required>
@@ -22,12 +23,12 @@
                         <label for="content">내용:</label>
                         <textarea class="form-control" id="content" name="content" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">추가</button>
+                    <button type="submit" class="btn btn-primary">수정</button>
                 </form>
             </div>
 
             <!-- 게시글 리스트 -->
-            <div class="mt-5">
+            <!-- <div class="mt-5">
                 <h2>게시글 목록</h2>
                 <table class="table table-bordered">
                     <thead>
@@ -42,20 +43,16 @@
                             <td th:text="${article.id}"></td>
                             <td th:text="${article.title}"></td>
                             <td th:text="${article.content}"></td>
-                            <td>
+                            <td> -->
                                 <!-- 수정 버튼 -->
-                                <a class="btn btn-warning" th:href="@{/article_edit/{id}(id=${article.id})}">수정</a>
+                                <!-- <a class="btn btn-warning" th:href="@{/article_edit/{id}(id=${article.id})}">수정</a> -->
                                 <!-- 삭제 버튼 -->
-                                <form th:action="@{/api/article_delete/{id}(id=${article.id})}" method="post" style="display:inline;">
-                                    <input type="hidden" name="_method" value="delete">
-                                    <button type="submit" class="btn btn-danger">삭제</button>
-                                </form>                            
+                                <!-- <a class="btn btn-warning" th:href="@{/article_edit/{id}(id=${article.id})}">삭제</a>
                             </td>
                         </tr>
-
                     </tbody>
                 </table>
-            </div>
+            </div> -->
         </div>
     </body>
 </html>
