--- a/src/main/resources/templates/board_view.html
+++ b/src/main/resources/templates/board_view.html
@@ -8,33 +8,34 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="mt-5">블로그 게시판(new)</h1>
-
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>글내용</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="board : ${boards}">
-                        <td th:text="${board.content}"></td>
-                    </tr>
-                    <tr th:each="board : ${boards}">
-                        <td>
-                            <!-- 수정 버튼 -->
-                            <a class="btn btn-warning" th:href="@{/board_edit/{id}(id=${board.id})}">수정</a>
-                            <!-- 삭제 버튼 -->
-                            <form th:action="@{/api/board_delete/{id}(id=${board.id})}" method="post" style="display:inline;">
-                                <input type="hidden" name="_method" value="delete">
-                                <button type="submit" class="btn btn-danger">삭제</button>
-                            </form>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <h1 class="mt-5">블로그 게시글 보기</h1>
             
-            
+            <div class="mt-5">
+                <h2>현재 게시글 내용 보기</h2>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>글내용</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="board : ${boards}">
+                            <td th:text="${board.content}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <tr th:each="board : ${boards}">
+                    <td>
+                        <!-- 수정 버튼 -->
+                        <a class="btn btn-warning" th:href="@{/board_edit/{id}(id=${board.id})}">수정</a>
+                        <!-- 삭제 버튼 -->
+                        <form th:action="@{/api/board_delete/{id}(id=${board.id})}" method="post" style="display:inline;">
+                            <input type="hidden" name="_method" value="delete">
+                            <button type="submit" class="btn btn-danger">삭제</button>
+                        </form>
+                    </td>
+                </tr>
+            </div>
         </div>
     </body>
 </html>
