9주차수정_글수정미완성

--- a/src/main/resources/templates/board_edit.html
+++ b/src/main/resources/templates/board_edit.html
@@ -51,7 +51,7 @@
                             </td>
                             <td th:text="${board.user}"></td>
                             <td th:text="${board.newdate}"></td>
-                            <td th:text="${board.content}"></td>
+                            <td th:text="${board.count}"></td>
                             <td th:text="${board.likec}"></td>
                         </tr>
                     </tbody>
