--- a/src/main/resources/templates/board_list.html
+++ b/src/main/resources/templates/board_list.html
@@ -42,7 +42,7 @@
                             </td>
                             <td th:text="${board.user}"></td>
                             <td th:text="${board.newdate}"></td>
-                            <td th:text="${board.content}"></td>
+                            <td th:text="${board.count}"></td>
                             <td th:text="${board.likec}"></td>
                             <td>
                                 <!-- 수정 버튼 -->
